#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this irogram.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-12-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999951 released.

        * More fixes for wxPerl in AWS.


2014-12-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999950 released.

        * More fixes for wxPerl in AWS.


2014-12-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999949 released.

        * More fixes for wxPerl in AWS.


2014-12-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999948 released.

        * More fixes for wxPerl in AWS.


2014-12-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999947 released.

        * Forgot to update FA_Code.pm in previous release.


2014-12-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999946 released.

        * Fixed wxPerl install.

 
2014-12-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999945 released.

        * Fixed wxPerl install.


2014-12-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999944 released.

        * Added wxPerl to demo list.


2014-12-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999943 released.

        * New AWS Intro in Makefile.PL for Windows exe.


2014-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999942 released.

        * Bug fix in Makefile.PL

        * Fix error handling in AWS EC2 Liferay demo. 


2014-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
