@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0312b1df216139bf8ca273516d707889a316f0fa ChangeLog
+SHA1 3258d917da9e408e16c1aa5ee4d13b7703441b7b ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 7035b7eada060ed73a005afb80605e6d31d7fc45 META.yml
-SHA1 869bde1caf5b2c50f16d17f79cd4795f31fe404d Makefile.PL
+SHA1 339f908c49b4c3dc079237b509ffc001b15a6a6e META.yml
+SHA1 90b240134f16218294a8836a45b74c2d48810020 Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 2f195a46e3011298365d42226dec47235bc3f94a lib/Net/FullAuto.pm
+SHA1 7bce506dcdcc2c3bf09876c45ce80094b19a5ce6 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 15b442ad7e268218b9156d48bba27c6d84ebcb57 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 1a55caef0c1740645faffd93301430a49e2311c2 lib/Net/FullAuto/FA_Core.pm
+SHA1 97145390a3f85b89372fab4ec780fa5d5bdce60a lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUifa9AAoJEBa/9Pad787Ew2IH/jnRKo1GeRZR+2UFUqsgAYV+
-mnuB0v+oQ7BjgQ9tovThpJUespXRUyk7fADxQuSTizJp5z90/e3S8zkCnfi2jZOe
-AuVm/9uJrXIneIRaGN2//MtSn/wlC/ZlvnEgxoPvcZ2pQC/LPf1Z2Yb0xwFwcHrx
-yZw/mQ/gNlbwtDbxQgEePJdvQvy1T+3XYPz8ieeYGd4gX8HrAq9cRcHEE76HpkCs
-jKcq8UV+DeKE4KCpaxuwqGuIoNjXQnPCvC1TO8GF5cS1KdT82MvKDN49N1rXkVPY
-ClM4c2GLfJsW2OAvfsjGvc3HLe6qZHBVnYEeyyyPG98VGR/QOnQwEYKZMAbi86E=
-=wDM6
+iQEcBAEBAgAGBQJUjZt1AAoJEBa/9Pad787ExaUH/0DEEPAzEshHRQ+pIT8MavQs
+KdHSQ8Xmikhr59hn0DsUe/v7BjwDZ24DL5Eb8uOOe/6Zs/iATql8EeulNqPwpmD7
+YEbhF27ZI1Zx7p2MqTWv++7uLN8JaUHJHbZIl9CUXjrld5QQ3/mg+qXAdWQnUG2C
+3HDxt2Q287tyz/XVXU46XewzxcKRUoE/L5yMpQ9VrdJySHCxTGsf9YA17loWG3tr
+JYhsmBS7qKLcOi5AeCpkexdQgRWla1YjDBv4w1emaIMpy3Ek9/F9yEO8GmPeVNQq
+NlgJnzhhK2hxNx+9JSxxy4JXMPN/qM3N+1d49K/Uv3H0AEkXqRTX+cl/f4ysTcs=
+=C6iq
 -----END PGP SIGNATURE-----
