@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999951';
+our $VERSION='0.999999999952';
 
 
 use 5.005;
