@@ -20,6 +20,13 @@
 #######################################################################
 
 
+2014-12-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999999999952 released.
+
+        * Added OpenLDAP build to FullAuto demo for AWS.
+
+
 2014-12-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999999999951 released.
